<resources>
    <string name="app_name">HomeWoork13Dialog</string>
    <string name="save">Save</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="date">Данные Сохранены</string>
    <string name="ok">ok</string>
    <string name="go">go</string>
    <string name="date1">%1d/%2d/%3d/</string>
</resources>