<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/birdth"
        android:layout_width="280dp"
        android:layout_marginTop="25sp"
        android:focusable="false"
        android:hint="@string/date_of_birth"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/first"
        android:layout_width="280dp"
       android:layout_marginTop="60sp"
        android:gravity="center"
        android:hint="@string/firstname"
        app:layout_constraintTop_toTopOf="@id/birdth"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/last"
        android:layout_width="280dp"
        android:layout_marginTop="60sp"
        app:layout_constraintTop_toTopOf="@id/first"
        android:gravity="center"
        android:hint="@string/lastname"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/save"
        app:layout_constraintTop_toBottomOf="@id/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>


    <Button
        android:id="@+id/save2"
        app:layout_constraintTop_toBottomOf="@id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/go"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>